--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 body {
 	width: 100%;
 	height: 100%;
-	background:url("bricks.jpg") no-repeat center fixed;
+	background:url("blue-pattern.jpg") no-repeat center fixed;
 	background-size: cover;
 }
 
