--- a/style.css
+++ b/style.css
@@ -1,112 +1,115 @@
-/* Global */
-
-* {
-	overflow-x: hidden;
-}
-html {
-	font-size: 1rem;
-	font-family: Lato, sans-serif;
-	text-align: center;
-	color: white;
-}
-
 body {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	margin: 0;
+	font-family: Roboto;
+	color: white;
+	background-color: #2A2F39;
+}
+
+p {
+	font-size: 24px;
+}
+
+.popup {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background: #fff;
+	color: black;
+	width: 400px;
+	height: 400px;
+	border-radius: 10px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(0.1);
+	border: solid;
+	visibility: hidden;
+}
+
+.open-popup {
+	top: 50%;
+	transform: translate(-50%, -50%) scale(1);
+	visibility: visible;
+}
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 25px;
+}
+
+.dividerContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+
+.divider {
 	width: 100%;
-	height: 100%;
-	background:url("blue-pattern.jpg") no-repeat center fixed;
-	background-size: cover;
+	height: 5px;
+	background-color: white;
+	margin: 0px;
 }
 
-/* Classes */
-
-.first h1 {
-	font-size: 15rem;
-	text-align: center;
-	background: linear-gradient(to top, #ff4500, #daa520);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-
-.first h5 {
-	font-size: 5rem;
-	text-align: center;
-	color: orange;
-	margin-bottom: 10rem;
-}
-
-.nav {
-	font-size: 35px;
-	text-align: center;
-	color: #c0c0c0;
-	margin-bottom: 0rem;
-	margin-right: 5rem;
-	margin-left: 5rem;
-	margin-top: 0px;
-	background: linear-gradient(to top, #ff4500, #daa520);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-
-.heading {
-	font-size: 4rem;
-	text-align: center;
-	background: linear-gradient(to top, #ffffff, #008080);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-}
-
-.profilepic {
-	text-align: center;
-	height: 80%;
-	width: 100%;
-}
-
-.info {
-	text-align: center;
+.name {
+	display: flex;
 	justify-content: center;
-	margin-right: 20rem;
-	margin-left: 20rem;
-	font-size: 24px;
+	align-items: center;
+	font-size: 32px;
+	height: 150px;
+	border: solid;
+	border-radius: 50px;
 }
 
-.hyperlink {
+#selfie {
+	width: 300px;
+	flex-grow: 1;
+	flex-shrink: 0;
+}
+
+h1 {
 	text-align: center;
-	font-size: 24px;
-	background: orange;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;	
 }
 
-.skills-list {
-	text-align: center;
-	justify-content: center;
-	margin-right: 20rem;
-	margin-left: 20rem;
-	font-size: 24px;
+.description {
+	margin: 10px;
+	min-width: 100px;
 }
 
-.language {
-	text-align: center;
-	justify-content: center;
-	margin-right: 20rem;
-	margin-left: 20rem;
-	font-size: 40px;
-	background: linear-gradient(to top, #ffffff, #008080);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+.about {
+	display: flex;
+	flex: 1;
+	align-items: center;
 }
 
-.skills-list hr {
-	margin-top: 3rem;
-	margin-bottom: 3rem;
+#home {
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
 }
 
-#bigspace {
-	margin-top: 4rem;
-	margin-bottom: 4rem;
+#contact {
+	width: 100px;
+	height: 50px;
 }
 
-.empty {
-	margin: 10rem, 10rem;
+.logo {
+	width: 300px;
+	height: auto;
+}
+
+.experiences {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+}
+
+.experience {
+	display: flex;
+	justify-content: space-between;
 }
