--- a/style.css
+++ b/style.css
@@ -8,8 +8,21 @@ body {
 	background-color: #2A2F39;
 }
 
+#linkedin {
+	color: blue;
+}
+
 p {
 	font-size: 24px;
+}
+
+li {
+	font-size: 18px;
+}
+
+.actions {
+	display: flex;
+	gap: 15px;
 }
 
 .popup {
@@ -54,6 +67,7 @@ p {
 	height: 5px;
 	background-color: white;
 	margin: 0px;
+	border-radius: 15px;
 }
 
 .name {
@@ -64,6 +78,7 @@ p {
 	height: 150px;
 	border: solid;
 	border-radius: 50px;
+	padding: 15px;
 }
 
 #selfie {
@@ -85,6 +100,7 @@ h1 {
 	display: flex;
 	flex: 1;
 	align-items: center;
+	gap: 15px;
 }
 
 #home {
@@ -93,10 +109,6 @@ h1 {
 	border-radius: 50px;
 }
 
-#contact {
-	width: 100px;
-	height: 50px;
-}
 
 .logo {
 	width: 300px;
@@ -112,5 +124,35 @@ h1 {
 .experience {
 	display: flex;
 	justify-content: space-between;
-	gap: 25px;
+	gap: 20px;
+}
+
+a {
+	color: white;
+}
+
+#contact, .git {
+	border-radius: 15px;
+	background-color: white;
+	font-size: 24px;
+	width: 100px;
+	height: 50px;
+	color: black;
+	text-decoration: none;
+}
+
+#back {
+	width: 200px;
+	height: 100px;
+	align-self: center;
+	border-radius: 25px;
+	flex-grow: 0;
+	flex-shrink: 0;
+	flex-basis: 1;
+}
+
+#backlink {
+	color: black;
+	text-decoration: none;
+	font-size: 32px;
 }
