--- a/style.css
+++ b/style.css
@@ -1,158 +1,76 @@
+* {
+    font-family: Roboto, "Roleway", sans-serif;
+    background-color: #FCEFEF;
+    margin: 0;
+}
+
 body {
-	display: flex;
-	flex-direction: column;
-	gap: 25px;
-	margin: 10px;
-	font-family: Roboto;
-	color: white;
-	background-color: #2A2F39;
+    display: flex;
+    flex-direction: column;
 }
 
-#linkedin {
-	color: blue;
+header {
+    background: #7FD8BE;
+    margin: 0;
+    margin-bottom: 100px;
+    padding: 0;
+    width: 100%;
+    padding: 15px 0;
 }
 
-p {
-	font-size: 24px;
+header * {
+    background: #7FD8BE;
 }
 
-li {
-	font-size: 18px;
+#navTitle {
+    font-size: 24px;
 }
 
-.actions {
-	display: flex;
-	gap: 15px;
+.navContainer {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.popup {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	background: #fff;
-	color: black;
-	width: 400px;
-	height: 400px;
-	border-radius: 10px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) scale(0.1);
-	border: solid;
-	visibility: hidden;
+.navContainer ul {
+    display: flex;
+    list-style: none;
 }
 
-.open-popup {
-	top: 50%;
-	transform: translate(-50%, -50%) scale(1);
-	visibility: visible;
+.navContainer ul li {
+    margin: 0 15px;
 }
 
-.header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 25px;
+.navContainer ul li a {
+    text-decoration: none;
+    color: black;
 }
 
-.dividerContainer {
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
+#introduction {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 0;
 }
 
-.divider {
-	width: 100%;
-	height: 5px;
-	background-color: white;
-	margin: 0px;
-	border-radius: 15px;
+#introduction p {
+    font-weight: 425;
+    margin-bottom: 15px;
 }
 
-.name {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 32px;
-	height: 150px;
-	border: solid;
-	border-radius: 50px;
-	padding: 15px;
+#self {
+    border-radius: 50%;
+    height: 250px;
+    margin-bottom: 35px;
 }
 
-#selfie {
-	width: 300px;
-	flex-grow: 1;
-	flex-shrink: 0;
-}
-
-h1 {
-	text-align: center;
-}
-
-.description {
-	margin: 10px;
-	min-width: 100px;
-}
-
-.about {
-	display: flex;
-	flex: 1;
-	align-items: center;
-	gap: 15px;
-}
-
-#home {
-	width: 50px;
-	height: 50px;
-	border-radius: 50px;
-}
-
-
-.logo {
-	width: 300px;
-	height: auto;
-}
-
-.experiences {
-	display: flex;
-	flex-direction: column;
-	gap: 25px;
-}
-
-.experience {
-	display: flex;
-	justify-content: space-between;
-	gap: 20px;
-}
-
-a {
-	color: white;
-}
-
-#contact, .git {
-	border-radius: 15px;
-	background-color: white;
-	font-size: 24px;
-	width: 100px;
-	height: 50px;
-	color: black;
-	text-decoration: none;
-}
-
-#back {
-	width: 200px;
-	height: 100px;
-	align-self: center;
-	border-radius: 25px;
-	flex-grow: 0;
-	flex-shrink: 0;
-	flex-basis: 1;
-}
-
-#backlink {
-	color: black;
-	text-decoration: none;
-	font-size: 32px;
+#contact {
+    border-width: 0;
+    border-radius: 50px;
+    width: 150px;
+    height: 30px;
+    background-color: #FF7F50;
 }
